--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "normalizr",
+  "name": "@profboss/normalizr",
   "version": "3.6.1",
   "description": "Normalizes and denormalizes JSON according to schema for Redux and Flux applications",
   "bugs": {
-    "url": "https://github.com/paularmstrong/normalizr/issues"
+    "url": "https://github.com/profboss/normalizr/issues"
   },
-  "homepage": "https://github.com/paularmstrong/normalizr",
+  "homepage": "https://github.com/profboss/normalizr",
   "repository": {
-    "url": "https://github.com/paularmstrong/normalizr.git",
+    "url": "https://github.com/profboss/normalizr.git",
     "type": "git"
   },
   "keywords": [
@@ -47,10 +47,7 @@
     "tsc:ci": "tsc --noEmit typescript-tests/*",
     "typecheck": "run-p flow:ci tsc:ci"
   },
-  "author": "Paul Armstrong",
-  "contributors": [
-    "Dan Abramov"
-  ],
+  "author": "Profitboss",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.0",
